2002-10-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menuitem.c (menuitem_paint):
	* fvwm/menustyle.c (menustyle_parse_style):
	(menustyle_parse_style):
	(CMD_CopyMenuStyle):
	(menustyle_update):
	(menustyle_free):
	* fvwm/menus.c (repaint_transparent_menu):
	* fvwm/menustyle.h:
	HilightBack and ActiveFore are now independent

2002-10-18  olicha  <olivier.chapuis@free.fr>

	* libs/PictureUtils.c (get_color_index):
	(create_mapping_table):
	(PictureAllocColorTable):
	Use a new distance and method for color approximation. Use 68 colors
	for the default under depth 8. I am happy with this, should use a
	similar distance method for dithering

	* libs/PictureUtils.c (alloc_color_dynamic_no_limit):
	(PictureAllocColorTable):
	(PictureDitherByDefault):
	(PictureUseBWOnly):
	(PictureInitColors):
	(PicturePrintColorInfo):
	* libs/PictureUtils.h:
	Allows -color-limit to work with any visual and depth for testing
	propose. Should replace (Pdepht < 2) test by (PictureUseBWOnly())

	* fvwm/colorset.c:
	Replaced (Pdepht < 2) test by (PictureUseBWOnly())

2002-10-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (get_default_window_attributes):
	cleaned up

	* fvwm/builtins.c (CMD_ChangeDecor):
	removed some duplicate redrawing

	* fvwm/update.c (apply_decor_change):
	suppress duplicate window update upon ChangeDecor
	(apply_window_updates):
	do not delete the focus window

2002-10-17  olicha  <olivier.chapuis@free.fr>

	* NEWS:
	A bunch of news

	* libs/Colorset.c (CreateBackgroundPixmap):
	Use a 1x1 pixmap and not a widthxheight pixmap for Plain color

	* fvwm/builtins.c (CMD_Colorset):
	Do not BroadcastColorset in CMD_Colorset, parse_colorset do that!!!

2002-10-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (AddWindow):
	* fvwm/update.c (apply_window_updates):
	* fvwm/move_resize.c (handle_stick):
	(CMD_Stick):
	suppress drawing of sticky decorations initially
	reduce module communication overhead when (un)sticking windows
